Update project structure