@@ -1,54 +1,61 @@
 package com.ryderbelserion.chatmanager.common.objects;
 
 import com.ryderbelserion.chatmanager.api.interfaces.IUser;
-import com.ryderbelserion.fusion.core.FusionCore;
-import com.ryderbelserion.fusion.core.files.FileManager;
-import com.ryderbelserion.fusion.core.files.types.YamlCustomFile;
+import com.ryderbelserion.chatmanager.common.ChatManager;
+import com.ryderbelserion.chatmanager.common.constants.Messages;
+import com.ryderbelserion.chatmanager.common.registry.MessageRegistry;
+import com.ryderbelserion.fusion.core.api.FusionProvider;
 import com.ryderbelserion.fusion.kyori.FusionKyori;
-import com.ryderbelserion.fusion.kyori.components.KyoriLogger;
 import net.kyori.adventure.audience.Audience;
+import net.kyori.adventure.key.Key;
+import net.kyori.adventure.text.Component;
 import org.jetbrains.annotations.NotNull;
-import org.spongepowered.configurate.CommentedConfigurationNode;
-import java.nio.file.Path;
-import java.util.Locale;
-import java.util.Objects;
+import java.util.*;
 
 public class User implements IUser {
 
-    private final FusionKyori kyori = (FusionKyori) FusionCore.Provider.get();
+    private final FusionKyori fusion = (FusionKyori) FusionProvider.getInstance();
 
-    private final FileManager fileManager = this.kyori.getFileManager();
-
-    private final KyoriLogger logger = this.kyori.getLogger();
-
-    private final Path path = this.kyori.getPath();
+    private final MessageRegistry registry;
+    private final ChatManager plugin;
 
     private final Audience audience;
 
-    public User(@NotNull final Audience audience) {
+    public User(@NotNull ChatManager plugin, @NotNull final Audience audience) {
         this.audience = audience;
+        this.plugin = plugin;
+        this.registry = this.plugin.getMessageRegistry();
     }
 
-    public CommentedConfigurationNode locale() {
-        final YamlCustomFile customFile = this.fileManager.getYamlFile(this.path.resolve("locale").resolve(String.format("%s.yml", getLocale())));
+    private Key locale = Messages.default_locale;
 
-        if (customFile == null) {
-            return Objects.requireNonNull(this.fileManager.getYamlFile(this.path.resolve("messages.yml"))).getConfiguration();
-        }
-
-        return customFile.getConfiguration();
+    @Override
+    public Component getComponent(@NotNull final Key key, @NotNull final Map<String, String> placeholders) {
+        return this.registry.getMessage(getLocale(), key).getComponent(getAudience(), placeholders);
     }
 
-    private String locale = "en-US";
+    @Override
+    public void sendMessage(@NotNull final Key key, @NotNull final Map<String, String> placeholders) {
+        this.registry.getMessage(getLocale(), key).send(getAudience(), placeholders);
+    }
+
+    @Override
+    public final boolean hasPermission(@NotNull final String permission) {
+        return this.plugin.hasPermission(getAudience(), permission);
+    }
 
     @Override
     public void setLocale(@NotNull final Locale locale) {
         final String country = locale.getCountry();
         final String language = locale.getLanguage();
 
-        this.locale = String.format("%s-%s", language, country);
+        final String value = "%s_%s.yml".formatted(language, country).toLowerCase();
 
-        this.logger.warn("Locale Debug: Country: {}, Language: {}", country, language);
+        if (!value.equalsIgnoreCase("en_us.yml")) {
+            this.locale = Key.key(ChatManager.namespace, value);
+        }
+
+        this.fusion.log("warn", "Locale Debug: Country: {}, Language: {}", country, language);
     }
 
     @Override
@@ -57,7 +64,7 @@ public class User implements IUser {
     }
 
     @Override
-    public @NotNull final String getLocale() {
+    public @NotNull final Key getLocale() {
         return this.locale;
     }
 }
